--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
         <h1>Random is Beautiful!</h1>
         <h2>Recommending books and movies, without prejudice!</h2>
         <p>Even the movies' poster may change our ideas about it. So it shouldn't right? That's why we're here. </p>
+        <div class="left">
+            <div class="buttons">
+                <button class="btn" id="movie">Movie</button>
+                <button class="btn active" id="book">Book</button>
+            </div>
+            <div class="launch">
+                <button>Launch!</button>
+            </div>
+        </div>
     </header>
     <main>
-        <div class="buttons">
-            <a class="" id="movie">Movie</a>
-            <a class="" id="book">Book</a>
-        </div>
         <div class="recommendation">
             <h1>Result is here!</h1>
             <p>This is recommended because someone loved it. You can either!</p>
